Integrate bff and add web onboarding app
